Bug 1054110 - Let profiling circular buffer survive thread shutdown. r=ehsan